# sea-surface-survey

./: .bruin.yml  .envrc  .gitattributes  .gitignore  Makefile  README.md  bruin_history.db  explore.py  pipeline.yml  pyproject.toml  terraform.tfstate
assets/mart/: latitude_zone_stats.bq.sql  latitude_zone_stats.sql  monthly_global_trends.bq.sql  monthly_global_trends.sql
assets/raw/: requirements.txt  sea_level_anomaly.py  sea_level_anomaly_load.py  sea_surface_temperature.py  sea_surface_temperature_load.py
assets/setup/: init_mart_tables.bq.sql
assets/staging/: sea_level_anomaly.bq.sql  sea_level_anomaly.sql  sea_surface_temperature.bq.sql  sea_surface_temperature.sql
streamlit-app/: README.md  app.py  requirements.txt
streamlit-app/.streamlit/: config.toml
streamlit-app/themes/: catppuccin_macchiato.yaml
streamlit-app/utils/: bq_client.py  charts.py
terraform/: main.tf  variables.tf
tests/: conftest.py  test_mart.py  test_transformations.py
