[project]
name = "sea-surface-survey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cdsapi>=0.7.5",
    "xarray>=2024.1.0",
    "netcdf4>=1.7.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
]

[dependency-groups]
dev = [
    "bruin-visualizer[duckdb]>=0.1.0",
    "pandas-stubs>=3.0.0.260204",
]
