[project]
name = "sea-surface-survey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cdsapi>=0.7.5",
    "xarray>=2024.1.0",
    "netcdf4>=1.7.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
]

[dependency-groups]
dev = [
    "bruin-visualizer[duckdb]>=0.1.0",
    "duckdb>=1.5.2",
    "marimo>=0.23.1",
    "matplotlib>=3.10.8",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=8.0.0",
    "scipy>=1.17.1",
]
